# pes4-best-tcc

./: .gitignore  README.md
desktop/: .gitignore  README.md  build.bat  build.sh  build.spec  main.py  requirements.txt  test_tftpy.py
desktop/custom_types/: events.py  screens.py
desktop/data/: classes.py  enums.py  errors.py  events.py
desktop/interfaces/: connection_transport.py  transfer_protocol.py
desktop/screens/: actions.py  components.py  connection_screen.py  error_screen.py  file_transfer_screen.py  images_screen.py  login_screen.py  main_screen.py  navigator.py  post_connection_screen.py  top_menu.py
desktop/services/: arinc_module.py  connection_service.py  event_emitter.py  file_tranfer_service.py  file_validator_service.py  imported_files_service.py  logging_service.py  service_facade.py  user_authentication_service.py  user_database_module.py  wifi.py  wifi_module.py  wifi_module_linux.py
desktop/ui/: actions.py  app.py  components.py  connection_screen.py  desktop_app.py  event_router.py  file_dialog.py  images_screen.py  main_screen.py  navigator.py  screen1.py  screen2.py  screen3.py  screen_manager.py  state_controller.py  styling.kv  top_menu.py  ui_manager.py
desktop/utils/: events.py
firmware/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig  sdkconfig.old
firmware/components/https_port/: CMakeLists.txt  https_port.c
firmware/components/storage_core/: partitions.csv
firmware/components/tftp/: tftp_port.c  tftp_server.c
firmware/main/: CMakeLists.txt  idf_component.yml  main.c
uploads/: arquivo_1.txt
(+145 files in other folders)
